# internal/api/controllers/controllers.go
@@ -14,18 +14,18 @@ type SpelingRequest struct {
 	texts map[string][]string
 }
 
-// GetLetters godoc
+// Summary Create
 // Tags spelling
 // @Summary      Page with spalling
 // @Description  Fetch rows and spelling
 // @Accept       json
 // @Produce      json
 // @Param input body SpelingRequest true "tests for spelling"
-// @Success      200  {object}  string
+// @Success      200  {object}  map[string][]string
 // @Failure      400  {object}  string
 // @Failure      422  {object}  string
 // @Failure      500  {object}  string
-// @Router       /letters [post]
+// @Router       / [post]
 func CheckCorrect(c *gin.Context) {
 	jsonDataBytes, err := ioutil.ReadAll(c.Request.Body)
 	if err != nil {
